<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:id="@+id/kidsQuiz"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp"
        tools:context="com.example.android.kidsquiz.MainActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/kids" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/s_q1"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/q1a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/s_q1_a" />

                <RadioButton
                    android:id="@+id/q1b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="@string/s_q1_b" />

            </RadioGroup>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/s_q2"
            android:textSize="18dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/q2a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/s_q2_a" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/s_q3"
            android:textSize="18dp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <CheckBox
                android:id="@+id/q3_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_q3_a" />

            <CheckBox
                android:id="@+id/q3_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28dp"
                android:layout_toRightOf="@id/q3_a"
                android:text="@string/s_q3_b" />

            <CheckBox
                android:id="@+id/q3_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28dp"
                android:layout_toRightOf="@id/q3_b"
                android:text="@string/s_q3_c" />

            <CheckBox
                android:id="@+id/q3_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/q3_a"
                android:text="@string/s_q3_d" />

            <CheckBox
                android:id="@+id/q3_e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/q3_b"
                android:layout_marginLeft="17dp"
                android:layout_toRightOf="@id/q3_d"
                android:text="@string/s_q3_e" />

            <CheckBox
                android:id="@+id/q3_f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/q3_c"
                android:layout_marginLeft="3dp"
                android:layout_toRightOf="@id/q3_e"
                android:text="@string/s_q3_f" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/s_q5"
            android:textSize="18dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/q4a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/s_q5_a" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/s_q4"
            android:textSize="18dp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/q5a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/s_q4_a" />

                <RadioButton
                    android:id="@+id/q5b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/s_q4_b" />

                <RadioButton
                    android:id="@+id/q5c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/s_q4_c" />

                <RadioButton
                    android:id="@+id/q5d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/s_q4_d" />
            </RadioGroup>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:textColor="#448AFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="8dp"
            android:onClick="submitOnclick"
            android:text="@string/submit"
            android:textColor="#C2185B" />

    </LinearLayout>

</ScrollView>